<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Who Can I Contact? "
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mens_advice_title"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:paddingRight="20dp"
                />

            <TextView
                android:id="@+id/mens_advice_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:autoLink="email"
                />

            <TextView
                android:id="@+id/mens_advice_number"
                android:autoLink="all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/mens_advice_number"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:background="@color/grey">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domestic_violence_helpline_title"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:paddingRight="20dp"
                />

            <TextView
                android:id="@+id/domestic_violence_helpline_number"
                android:autoLink="all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/domestic_violence_helpline_number"
                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chscb_title"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:paddingRight="20dp"
                />

            <TextView
                android:id="@+id/chscb_number_abuse"
                android:autoLink="all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/chscb_number"
                />

            <TextView
                android:id="@+id/chscb_email_abuse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:autoLink="email"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:background="@color/grey">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daymer_title"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:paddingRight="20dp"
                />

            <TextView
                android:id="@+id/daymer_number"
                android:autoLink="all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/domestic_violence_helpline_number"
                />

            <TextView
                android:id="@+id/daymer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:autoLink="email"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broken_rainbow_title"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:paddingRight="20dp"
                />

            <TextView
                android:id="@+id/broken_rainbow_number"
                android:autoLink="all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/broken_rainbow_number"
                />

            <TextView
                android:id="@+id/broken_rainbow_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:autoLink="email"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:background="@color/grey">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/childline_title"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:paddingRight="20dp"
                />

            <TextView
                android:id="@+id/childline_number"
                android:autoLink="all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/childline_number"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mosac_title"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:paddingRight="20dp"
                />

            <TextView
                android:id="@+id/mosac_number"
                android:autoLink="all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:text="@string/mosac_number"
                />

            <TextView
                android:id="@+id/mosac_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="#000000"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="3dp"
                android:autoLink="email"
                />

        </LinearLayout>






    </LinearLayout>


</ScrollView>